Bug 366616 - Canvas in XUL is not rendered.  Patch by Andrew Miller <ak.miller@auckland.ac.nz>, r=vlad, sr=dbaron